# Bingo-helper

./: .gitignore  README.md  bingo_app.py  cards.txt  img_preprocess.py  img_to_dict.py  pyproject.toml  requirements.txt  txt_to_card.py
bingo_helper/: README.md  app.config  bingo_app.py  bingo_env.yml  draw_numbers.py  pyproject.toml  requirements.txt  txt_to_card.py
bingo_helper/static/: style.css
bingo_helper/templates/: index.html  number_grid.html
bingo_helper/translations/da/LC_MESSAGES/: messages.po
static/: style.css
templates/: number_grid.html
